--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -13,6 +13,7 @@ jobs:
   image-build:
     name: Build FetchIt Podman Desktop container
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,9 +34,24 @@ jobs:
     
       - name: "Build Operator Image"
         uses: docker/build-push-action@v2
+        if: >
+          (github.event_name == 'push' || github.event_name == 'schedule') &&
+          (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
         with:
           context: .
           file: "./Dockerfile"
           platforms: "linux/amd64,linux/arm64"
           push: true
+          tags: ${{ env.CONTAINER_IMAGE }}
+
+      - name: "Build Operator Image"
+        uses: docker/build-push-action@v2
+        if: >
+          (github.event_name == 'push' || github.event_name == 'schedule') &&
+          (github.ref != 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+        with:
+          context: .
+          file: "./Dockerfile"
+          platforms: "linux/amd64,linux/arm64"
+          push: false
           tags: ${{ env.CONTAINER_IMAGE }}
